early localization effort, some improvements

--- a/PDFSlider/App.config
+++ b/PDFSlider/App.config
@@ -7,5 +7,6 @@
     <add key="secondsBetweenSlides" value="30"/> <!-- Time between slides in seconds-->
     <add key="selectedDirPath" value=""/>
     <add key="showCfgWndOnStartup" value="true"/>
+    <add key="appLanguage" value="en"/> <!--pl - polish, en - english-->
   </appSettings>
 </configuration>
